Dispatching events to kafka

--- a/.env
+++ b/.env
@@ -18,3 +18,12 @@
 APP_ENV=dev
 APP_SECRET=57fedc202a1ef151630ac388374578ad
 ###< symfony/framework-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
+
+KAFKA_URL=kafka://broker:9092
